--- a/OracleOpenJDK/24/Dockerfile.ol9
+++ b/OracleOpenJDK/24/Dockerfile.ol9
@@ -1,21 +1,21 @@
-# Copyright (c) 2022, 2024 Oracle and/or its affiliates.
+# Copyright (c) 2022, 2025 Oracle and/or its affiliates.
 #
 # Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.
 #
 # ORACLE DOCKERFILES PROJECT
 # --------------------------
-# This is the Dockerfile for Oracle OpenJDK 23 on Oracle Linux 9
+# This is the Dockerfile for Oracle OpenJDK 24 on Oracle Linux 9
 #
 # REQUIRED FILES TO BUILD THIS IMAGE
 # ----------------------------------
 #
-# (1) openjdk-23.xx_linux-x64_bin.tar.gz
-#     Downloaded from https://jdk.java.net/23/
+# (1) openjdk-24.xx_linux-x64_bin.tar.gz
+#     Downloaded from https://jdk.java.net/24/
 #
 # HOW TO BUILD THIS IMAGE
 # -----------------------
 # Run:
-#      $ docker build --file Dockerfile.ol9 --tag oracle/openjdk:23 .
+#      $ docker build --file Dockerfile.ol9 --tag oracle/openjdk:24 .
 #
 # This command is already scripted in build.sh so you can alternatively run
 #		$ bash build.sh
@@ -25,8 +25,8 @@ FROM oraclelinux:9
 
 LABEL maintainer="Aurelio Garcia-Ribeyro <aurelio.garciaribeyro@oracle.com>"
 
-ENV JAVA_URL=https://download.java.net/java/GA/jdk23.0.2/6da2a6609d6e406f85c491fcb119101b/7/GPL \
-	JAVA_HOME=/usr/java/jdk-23 \
+ENV JAVA_URL=https://download.java.net/java/GA/jdk24/1f9ff9062db4449d8ca828c504ffae90/36/GPL \
+	JAVA_HOME=/usr/java/jdk-24 \
 	LANG=en_US.UTF-8
 
 # If you need the Java Version you can read it from the release file with
@@ -49,7 +49,7 @@ RUN set -eux; \
     if [ "$ARCH" = "x86_64" ]; \
         then ARCH="x64"; \
     fi && \
-    JAVA_PKG="$JAVA_URL"/openjdk-23.0.2_linux-"${ARCH}"_bin.tar.gz ; \
+    JAVA_PKG="$JAVA_URL"/openjdk-24_linux-"${ARCH}"_bin.tar.gz ; \
 	JAVA_SHA256="$(curl "$JAVA_PKG".sha256)" ; \
 	curl --output /tmp/jdk.tgz "$JAVA_PKG" && \
 	echo "$JAVA_SHA256" */tmp/jdk.tgz | sha256sum -c -; \
